// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Layout/SensorPageHeader Maximum Props 1`] = `
<div
  className="bg-gray-50 relative mt-[calc(-1*var(--headerHeight))]"
>
  <div
    className="md:absolute z-0 inset-0 bg-purple bg-opacity-5 grid md:grid-cols-2 h-80 md:h-auto"
  >
    <div
      className="bg-white hidden md:block"
    />
    <div
      className="relative"
    >
      <div
        style={
          Object {
            "cursor": "grab",
            "height": "100%",
            "position": "relative",
            "width": "100%",
          }
        }
      >
        <div
          style={
            Object {
              "height": "100%",
              "position": "relative",
              "width": "100%",
            }
          }
        >
          <div
            className=" undefined"
            style={
              Object {
                "height": "100%",
                "overflow": "hidden",
                "position": "absolute",
                "visibility": "inherit",
                "width": "100%",
              }
            }
          />
        </div>
      </div>
      <span
        className="bg-blue w-3 h-3 rounded-full absolute inline-block top-1/2 left-1/2 transform -translate-x-1.5 -translate-y-1.5"
      />
      <div
        className="absolute inset-0 bg-left-bottom bg-no-repeat pointer-events-none bg-sensor-page-header-mobile bg-repeat-x md:bg-sensor-page-header md:bg-no-repeat"
      />
    </div>
  </div>
  <div
    className="container max-w-8xl mx-auto relative z-10"
  >
    <aside
      className="md:w-1/2 bg-white px-4 py-8 md:py-40 md:pr-12 md:max-w-[560px]"
    >
      <a
        className="text-blue hover:text-purple transition items-center font-bold flex gap-2 mb-8 text-sm sm:text-base focus-offset"
        href="/sensors"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        <svg
          aria-hidden={true}
          className="MuiSvgIcon-root"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
          />
        </svg>
         Zurück zu Sensoren
      </a>
      <h1
        className="grid gap-4 grid-cols-[24px,1fr] font-semibold font-headline text-blue mb-2 leading-tight sm:leading-tight md:leading-tight text-xl sm:text-2xl md:text-3xl"
      >
        <span
          className="mt-1 inline-block bg-gray-50 w-6 h-6}"
        >
          <div
            style={
              Object {
                "boxSizing": "border-box",
                "display": "inline-block",
                "margin": 0,
                "maxWidth": "100%",
                "overflow": "hidden",
                "position": "relative",
              }
            }
          >
            <div
              style={
                Object {
                  "boxSizing": "border-box",
                  "display": "block",
                  "maxWidth": "100%",
                }
              }
            >
              <img
                alt=""
                aria-hidden={true}
                src="data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMjQiIGhlaWdodD0iMjQiIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyIgdmVyc2lvbj0iMS4xIi8+"
                style={
                  Object {
                    "border": "none",
                    "display": "block",
                    "margin": 0,
                    "maxWidth": "100%",
                    "padding": 0,
                  }
                }
              />
            </div>
            <img
              alt="Sensor Symbol 1"
              className="w-6 h-6"
              data-nimg="intrinsic"
              decoding="async"
              src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
              style={
                Object {
                  "border": "none",
                  "bottom": 0,
                  "boxSizing": "border-box",
                  "display": "block",
                  "height": 0,
                  "left": 0,
                  "margin": "auto",
                  "maxHeight": "100%",
                  "maxWidth": "100%",
                  "minHeight": "100%",
                  "minWidth": "100%",
                  "objectFit": undefined,
                  "objectPosition": undefined,
                  "padding": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                  "width": 0,
                }
              }
            />
            <noscript>
              <img
                alt="Sensor Symbol 1"
                className="w-6 h-6"
                data-nimg="intrinsic"
                decoding="async"
                loading="lazy"
                src="/_next/image?url=%2Fimages%2Fsensor-symbols%2F1.svg&w=48&q=75"
                srcSet="/_next/image?url=%2Fimages%2Fsensor-symbols%2F1.svg&w=32&q=75 1x, /_next/image?url=%2Fimages%2Fsensor-symbols%2F1.svg&w=48&q=75 2x"
                style={
                  Object {
                    "border": "none",
                    "bottom": 0,
                    "boxSizing": "border-box",
                    "display": "block",
                    "height": 0,
                    "left": 0,
                    "margin": "auto",
                    "maxHeight": "100%",
                    "maxWidth": "100%",
                    "minHeight": "100%",
                    "minWidth": "100%",
                    "objectFit": undefined,
                    "objectPosition": undefined,
                    "padding": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                    "width": 0,
                  }
                }
              />
            </noscript>
          </div>
        </span>
        <span>
          When Array is given multiple arguments
        </span>
      </h1>
      <div
        className="flex gap-4"
      >
        <span
          className="inline-flex gap-2 items-center px-2.5 py-2 text-blue leading-tight bg-green bg-opacity-10 text-sm flex-grow-0"
        >
          <svg
            className=""
            height="16"
            role="img"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6 0a3 3 0 0 1 2.995 2.824L9 3l.001 5.124.128.117a4.48 4.48 0 0 1 1.344 2.761l.02.248.007.25c0 2.506-1.968 4.5-4.5 4.5-2.543 0-4.6-2.005-4.6-4.5 0-1.208.488-2.333 1.32-3.16l.17-.16.11-.094V3A3 3 0 0 1 5.65.02l.174-.015L6 0Zm0 2a1 1 0 0 0-.993.883L5 3v6.13l-.456.295A2.469 2.469 0 0 0 3.4 11.5C3.4 12.879 4.55 14 6 14c1.422 0 2.5-1.093 2.5-2.5 0-.786-.34-1.494-.916-1.957l-.148-.11L7 9.135 7 3a1 1 0 0 0-1-1Zm7 4a1 1 0 0 1 0 2h-2a1 1 0 1 1 0-2h2Zm0-4a1 1 0 0 1 0 2h-2a1 1 0 1 1 0-2h2Z"
              fill="currentColor"
              fillRule="nonzero"
            />
          </svg>
          Temperatur
        </span>
        <a
          className="flex gap-2 items-center leading-tight hover:text-purple transition focus-offset truncate"
          href="/yupank1/sensors"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          <span
            className="inline-block align-middle rounded-full border border-gray-50"
            role="img"
            style={
              Object {
                "height": 25,
                "width": 25,
              }
            }
          >
            <img
              alt="Avatar of yupank1"
              height={24}
              src="https://source.boringavatars.com/pixel/24/yupank1?colors=F9FCFD,0000C2,0000C2,0000C2,100C53,46ECA1,46ECA1,46ECA1,8330FF,8330FF,8330FF,F2F3F8,E7EAF2,CFD0DC,B4B4C7,9695AE,787696,636188,4A4878,332F66,1E1A5A"
              width={24}
            />
          </span>
          <span
            className="truncate"
          >
            Atahualpa Yupanqui De la Vega Van Hilde
          </span>
        </a>
      </div>
      <div
        className="py-6"
      >
        <p
          className="text-sm sm:text-base max-w-prose break-words"
        >
          
          @wdanxna
           when Array is given multiple arguments, it iterates over the arguments object and explicitly applies each value to the new array. When you call Array.apply with an array or an object with a length property Array is going to use the length to explicitly set each value of the new array. This is why Array(5) gives an array of 5 elisions, while Array.apply(null, Array(5)) gives an array of 5 undefineds. For more information, see this answer.
        </p>
      </div>
      <div
        className="flex-col"
      >
        <label
          className="text-sm text-gray-500 mb-1 block"
          htmlFor="api-url"
        >
          API Schnittstelle
        </label>
        <input
          className="text-sm"
          id="api-url"
          name="api-url"
          onClick={[Function]}
          readOnly={true}
          type="text"
          value="fake-token-api-url.com/api/v3/sensors/1/records"
        />
        <div
          aria-hidden={true}
          aria-label="In Zwischenablage kopiert!"
          className="flex items-center justify-end opacity-0"
          hidden={true}
        >
          <div
            className="text-green"
          >
            <svg
              height="16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M14.088 1.691a1 1 0 0 1 .288 1.291l-.067.106-8 11-.009.012a.4.4 0 0 1-.032.04l.04-.052a1.009 1.009 0 0 1-.089.107l-.012.012-.03.029a.993.993 0 0 1-.054.047l.084-.076a1.007 1.007 0 0 1-.74.293 1.066 1.066 0 0 1-.303-.058.955.955 0 0 1-.252-.133L4.9 14.3a.999.999 0 0 1-.013-.01l-.037-.032-.035-.03a1 1 0 0 1-.01-.009l-.012-.012-3-3a1 1 0 0 1 1.32-1.497l.094.083 2.172 2.17 7.312-10.051a1 1 0 0 1 1.397-.22Z"
                fill="currentColor"
              />
            </svg>
          </div>
          <span
            className="ml-1 text-xs text-gray-600"
          >
            In Zwischenablage kopiert!
          </span>
        </div>
      </div>
      <div
        className="w-full order-last mt-6"
      >
        <button
          className="inline-block font-headline transition text-base sm:text-lg rounded-none px-3 sm:px-4 py-1.5 sm:py-2 cursor-pointer focus-offset focus:ring-green border border-purple hover:bg-opacity-10 hover:bg-green hover:border-green"
          onClick={[Function]}
          type="button"
        >
          Sensor editieren
        </button>
      </div>
    </aside>
  </div>
</div>
`;

exports[`Storyshots Layout/SensorPageHeader Minimum Props 1`] = `
<div
  className="bg-gray-50 relative mt-[calc(-1*var(--headerHeight))]"
>
  <div
    className="md:absolute z-0 inset-0 bg-purple bg-opacity-5 grid md:grid-cols-2 h-80 md:h-auto"
  >
    <div
      className="bg-white hidden md:block"
    />
    <div
      className="relative"
    >
      <div
        style={
          Object {
            "cursor": "grab",
            "height": "100%",
            "position": "relative",
            "width": "100%",
          }
        }
      >
        <div
          style={
            Object {
              "height": "100%",
              "position": "relative",
              "width": "100%",
            }
          }
        >
          <div
            className=" undefined"
            style={
              Object {
                "height": "100%",
                "overflow": "hidden",
                "position": "absolute",
                "visibility": "inherit",
                "width": "100%",
              }
            }
          />
        </div>
      </div>
      <span
        className="bg-blue w-3 h-3 rounded-full absolute inline-block top-1/2 left-1/2 transform -translate-x-1.5 -translate-y-1.5"
      />
      <div
        className="absolute inset-0 bg-left-bottom bg-no-repeat pointer-events-none bg-sensor-page-header-mobile bg-repeat-x md:bg-sensor-page-header md:bg-no-repeat"
      />
    </div>
  </div>
  <div
    className="container max-w-8xl mx-auto relative z-10"
  >
    <aside
      className="md:w-1/2 bg-white px-4 py-8 md:py-40 md:pr-12 md:max-w-[560px]"
    >
      <a
        className="text-blue hover:text-purple transition items-center font-bold flex gap-2 mb-8 text-sm sm:text-base focus-offset"
        href="/sensors"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        <svg
          aria-hidden={true}
          className="MuiSvgIcon-root"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
          />
        </svg>
         Zurück zu Sensoren
      </a>
      <h1
        className="grid gap-4 grid-cols-[24px,1fr] font-semibold font-headline text-blue mb-2 leading-tight sm:leading-tight md:leading-tight text-xl sm:text-2xl md:text-3xl"
      >
        <span
          className="mt-1 inline-block bg-gray-50 w-6 h-6}"
        >
          <div
            style={
              Object {
                "boxSizing": "border-box",
                "display": "inline-block",
                "margin": 0,
                "maxWidth": "100%",
                "overflow": "hidden",
                "position": "relative",
              }
            }
          >
            <div
              style={
                Object {
                  "boxSizing": "border-box",
                  "display": "block",
                  "maxWidth": "100%",
                }
              }
            >
              <img
                alt=""
                aria-hidden={true}
                src="data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMjQiIGhlaWdodD0iMjQiIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyIgdmVyc2lvbj0iMS4xIi8+"
                style={
                  Object {
                    "border": "none",
                    "display": "block",
                    "margin": 0,
                    "maxWidth": "100%",
                    "padding": 0,
                  }
                }
              />
            </div>
            <img
              alt="Sensor Symbol 13"
              className="w-6 h-6"
              data-nimg="intrinsic"
              decoding="async"
              src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
              style={
                Object {
                  "border": "none",
                  "bottom": 0,
                  "boxSizing": "border-box",
                  "display": "block",
                  "height": 0,
                  "left": 0,
                  "margin": "auto",
                  "maxHeight": "100%",
                  "maxWidth": "100%",
                  "minHeight": "100%",
                  "minWidth": "100%",
                  "objectFit": undefined,
                  "objectPosition": undefined,
                  "padding": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                  "width": 0,
                }
              }
            />
            <noscript>
              <img
                alt="Sensor Symbol 13"
                className="w-6 h-6"
                data-nimg="intrinsic"
                decoding="async"
                loading="lazy"
                src="/_next/image?url=%2Fimages%2Fsensor-symbols%2F13.svg&w=48&q=75"
                srcSet="/_next/image?url=%2Fimages%2Fsensor-symbols%2F13.svg&w=32&q=75 1x, /_next/image?url=%2Fimages%2Fsensor-symbols%2F13.svg&w=48&q=75 2x"
                style={
                  Object {
                    "border": "none",
                    "bottom": 0,
                    "boxSizing": "border-box",
                    "display": "block",
                    "height": 0,
                    "left": 0,
                    "margin": "auto",
                    "maxHeight": "100%",
                    "maxWidth": "100%",
                    "minHeight": "100%",
                    "minWidth": "100%",
                    "objectFit": undefined,
                    "objectPosition": undefined,
                    "padding": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                    "width": 0,
                  }
                }
              />
            </noscript>
          </div>
        </span>
        <span>
          LUFYA1
        </span>
      </h1>
      <div
        className="flex gap-4"
      >
        <span
          className="inline-flex gap-2 items-center px-2.5 py-2 text-blue leading-tight bg-green bg-opacity-10 text-sm flex-grow-0"
        >
          <svg
            className=""
            height="16"
            role="img"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m15.976 10.445-.015.112a3.994 3.994 0 0 1-.024.155l-.018.093a3.136 3.136 0 0 1-.07.285 3.91 3.91 0 0 1-.166.474l-.034.075c-.04.092-.086.183-.134.271l-.048.085.048-.085A4 4 0 0 1 12 14H4a4 4 0 0 1-1.971-7.481 4.002 4.002 0 0 1 3.49-3.49A4 4 0 0 1 13 5l.002 1.126c.045.012.083.022.12.034l-.12-.034c.074.02.148.04.22.064l.054.018c.048.016.095.032.142.05l.044.018c.05.019.098.039.146.06l.039.018c.054.024.107.049.159.075l.024.014c.044.022.087.045.13.069l.041.024.04.022a4 4 0 0 1 .091.056L14 6.536a4.062 4.062 0 0 1 .289.183 3.979 3.979 0 0 1 1.239 1.394l.027.052c.022.042.043.085.064.129l.012.027c.026.054.05.11.073.165A3.91 3.91 0 0 1 16 9.952v.093c0 .133-.009.266-.024.4ZM9 3c-.673 0-1.286.334-1.654.876l-.087.14-.499.878-1.003.12A2.003 2.003 0 0 0 4.04 6.598l-.026.159-.12 1.003-.878.498a2 2 0 0 0 .835 3.736L4 12h8a2 2 0 0 0 1.954-1.57l.024-.134a2.016 2.016 0 0 0-.032-.757l.012.052a2.012 2.012 0 0 0-.04-.16l.028.108a1.992 1.992 0 0 0-.036-.134l.007.026a2.012 2.012 0 0 0-.038-.117l.03.091a1.995 1.995 0 0 0-.053-.15l.023.06a2.009 2.009 0 0 0-.052-.13l.029.07a2 2 0 0 0-.06-.136l.03.066a2.004 2.004 0 0 0-.065-.133l.035.067a2.005 2.005 0 0 0-.077-.141l.042.074a1.997 1.997 0 0 0-.075-.129l.033.055a2.01 2.01 0 0 0-.082-.128l.049.073a1.99 1.99 0 0 0-.094-.135l.045.062a2.011 2.011 0 0 0-.1-.13l.055.068a1.986 1.986 0 0 0-.089-.108l.034.04a2.01 2.01 0 0 0-.084-.095l.05.055a1.984 1.984 0 0 0-.102-.108l.052.053a2.008 2.008 0 0 0-.107-.105l.055.052a1.989 1.989 0 0 0-.126-.114l.071.062a2.003 2.003 0 0 0-.11-.094l.039.032a2.001 2.001 0 0 0-.124-.094l.084.062a1.996 1.996 0 0 0-.117-.085l.033.023a2.024 2.024 0 0 0-.134-.086l.101.063a1.99 1.99 0 0 0-.134-.083l.016.01a2.017 2.017 0 0 0-.302-.143l.045.018A2 2 0 0 0 10.268 9a1 1 0 0 1-1.732-1A3.988 3.988 0 0 1 11 6.127V5a2 2 0 0 0-2-2Z"
              fill="currentColor"
              fillRule="nonzero"
            />
          </svg>
          CO2
        </span>
        <a
          className="flex gap-2 items-center leading-tight hover:text-purple transition focus-offset truncate"
          href="/lalushka/sensors"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          <span
            className="inline-block align-middle rounded-full border border-gray-50"
            role="img"
            style={
              Object {
                "height": 25,
                "width": 25,
              }
            }
          >
            <img
              alt="Avatar of lalushka"
              height={24}
              src="https://source.boringavatars.com/pixel/24/lalushka?colors=F9FCFD,0000C2,0000C2,0000C2,100C53,46ECA1,46ECA1,46ECA1,8330FF,8330FF,8330FF,F2F3F8,E7EAF2,CFD0DC,B4B4C7,9695AE,787696,636188,4A4878,332F66,1E1A5A"
              width={24}
            />
          </span>
          <span
            className="truncate"
          >
            La La
          </span>
        </a>
      </div>
      <div
        className="py-6"
      />
      <div
        className="flex-col"
      >
        <label
          className="text-sm text-gray-500 mb-1 block"
          htmlFor="api-url"
        >
          API Schnittstelle
        </label>
        <input
          className="text-sm"
          id="api-url"
          name="api-url"
          onClick={[Function]}
          readOnly={true}
          type="text"
          value="fake-token-api-url.com/api/v3/sensors/1/records"
        />
        <div
          aria-hidden={true}
          aria-label="In Zwischenablage kopiert!"
          className="flex items-center justify-end opacity-0"
          hidden={true}
        >
          <div
            className="text-green"
          >
            <svg
              height="16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M14.088 1.691a1 1 0 0 1 .288 1.291l-.067.106-8 11-.009.012a.4.4 0 0 1-.032.04l.04-.052a1.009 1.009 0 0 1-.089.107l-.012.012-.03.029a.993.993 0 0 1-.054.047l.084-.076a1.007 1.007 0 0 1-.74.293 1.066 1.066 0 0 1-.303-.058.955.955 0 0 1-.252-.133L4.9 14.3a.999.999 0 0 1-.013-.01l-.037-.032-.035-.03a1 1 0 0 1-.01-.009l-.012-.012-3-3a1 1 0 0 1 1.32-1.497l.094.083 2.172 2.17 7.312-10.051a1 1 0 0 1 1.397-.22Z"
                fill="currentColor"
              />
            </svg>
          </div>
          <span
            className="ml-1 text-xs text-gray-600"
          >
            In Zwischenablage kopiert!
          </span>
        </div>
      </div>
    </aside>
  </div>
</div>
`;
